--- a/templates/index.html
+++ b/templates/index.html
@@ -119,7 +119,7 @@
 </head>
 
 <body>
-	<h1>Chat Bot</h1>
+	<h1>Interviewee Response Analyzer</h1>
 	<div id="chatContainer"></div>
 
 	<form id="questionForm">
